--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php":            ">=5.3.2",
     "behat/behat":    "~3.0,>=3.0.5",
-    "symfony/config": "~2.2"
+    "symfony/config": "~2.2",
+    "doctrine/orm":   "~2"
   },
   "require-dev": {
     "phpunit/phpunit":     "~4.1",
